boards: nsim_arc_v/rmx100: Add ICCM/DCCM and move UART
- Add ICCM (512KB @ 0x00000000) and DCCM (512KB @ 0x80000000)
  as zephyr,memory-region nodes
- Select DCCM as /chosen zephyr,sram
- Move UART0 base to 0xF0000000
- Remove previous DDR stub from rmx100.dtsi
- Set SRAM base/size defaults to DCCM in board defconfig
- Update nSIM props to reflect new UART base

--- a/boards/snps/nsim/arc_v/rmx100.dtsi
+++ b/boards/snps/nsim/arc_v/rmx100.dtsi
@@ -1,8 +1,3 @@
 #include "rmx1xx.dtsi"
 
-/ {
-	ddr0: memory@80000000 {
-		device_type = "memory";
-		reg = <0x80000000 0x10000000>; /* 256 MB */
-	};
-};
+/* RMX100 uses DCCM at 0x80000000 as SRAM; remove previous DDR stub. */
