--- a/boards/snps/nsim/arc_v/rmx1xx.dtsi
+++ b/boards/snps/nsim/arc_v/rmx1xx.dtsi
@@ -2,6 +2,19 @@
 	#address-cells = <1>;
 	#size-cells = <1>;
 
+	/* Closely Coupled Memories */
+	iccm0: memory@0 {
+		compatible = "zephyr,memory-region", "mmio-sram";
+		zephyr,memory-region = "ICCM";
+		reg = <0x00000000 0x00080000>; /* 512 KB */
+	};
+
+	dccm0: memory@80000000 {
+		compatible = "zephyr,memory-region", "mmio-sram";
+		zephyr,memory-region = "DCCM";
+		reg = <0x80000000 0x00080000>; /* 512 KB */
+	};
+
 	cpus {
 		timebase-frequency = <5000000>;
 		#address-cells = <1>;
@@ -44,9 +57,9 @@
 			reg-names = "mtime", "mtimecmp";
 		};
 
-		uart0: serial@10000000 {
+		uart0: serial@f0000000 {
 			compatible = "ns16550", "snps,dw-apb-uart";
-			reg = <0x10000000 0x400>;
+			reg = <0xf0000000 0x400>;
 			reg-shift = <2>;
 
 			/* AIA interrupt controller is not currently implemented,
