boards: snps: nsim: arc_v: add AIA support for RMX100
Add AIA (Advanced Interrupt Architecture) support for Synopsys nSIM
ARC-V RMX100 simulator platform.

Board variant added:
- nsim_arc_v/rmx100/aia_mmsi: RMX100 with APLIC-MSI + IMSIC in MMSI mode

nSIM-specific considerations:
- Uses hardware props files for APLIC/IMSIC configuration
- Read-only APLIC registers (configured via props)
- Identity EIID mapping (source == EIID)
- Supports both MMSI and DMSI delivery modes

Props files configure interrupt controller base addresses, geometry,
and delivery modes for nSIM hardware simulation.

Signed-off-by: Afonso Oliveira <afonso.oliveira@synopsys.com>

--- a/soc/snps/nsim/arc_v/soc.yml
+++ b/soc/snps/nsim/arc_v/soc.yml
@@ -4,6 +4,7 @@ family:
       - name: rmx
         socs:
           - name: rmx100
+          - name: rmx100_aia_mmsi
       - name: rhx
         socs:
           - name: rhx100
