--- a/soc/snps/nsim/arc_v/rmx/Kconfig
+++ b/soc/snps/nsim/arc_v/rmx/Kconfig
@@ -11,6 +11,10 @@ config SOC_SERIES_RMX
 	select RISCV_ISA_EXT_C
 	select RISCV_ISA_EXT_ZICSR
 	select RISCV_ISA_EXT_ZIFENCEI
+	select RISCV_ISA_EXT_ZBA
+	select RISCV_ISA_EXT_ZBB
+	select RISCV_ISA_EXT_ZBS
+	select RISCV_ISA_EXT_SMRNMI
 	select RISCV_SOC_HAS_GP_RELATIVE_ADDRESSING
 	select INCLUDE_RESET_VECTOR
 	imply XIP
