--- a/boards/snps/nsim/arc_v/nsim_arc_v_rmx100.dts
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rmx100.dts
@@ -7,12 +7,7 @@
 	compatible = "snps,rmx100";
 
 	chosen {
-		zephyr,sram = &ddr0;
-		zephyr,console = &uart0;
-		zephyr,shell-uart = &uart0;
+		zephyr,flash = &iccm0;
+		zephyr,sram = &dccm0;
 	};
-};
-
-&uart0 {
-	status = "okay";
 };
