--- a/boards/snps/nsim/arc_v/nsim_arc_v_rmx100.dts
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rmx100.dts
@@ -6,18 +6,9 @@
 	model = "Synopsys RMX100";
 	compatible = "snps,rmx100";
 
-	aliases {
-		uart-0 = &uart0;
-	};
-
 	chosen {
-		zephyr,sram = &ddr0;
-		zephyr,console = &uart0;
-		zephyr,shell-uart = &uart0;
+		zephyr,sram = &dccm0;
+		zephyr,flash = &iccm0;
+		zephyr,code-partition = &iccm0;
 	};
-};
-
-&uart0 {
-	status = "okay";
-	current-speed = <115200>;
 };
