--- a/boards/snps/nsim/arc_v/nsim_arc_v_rmx100_defconfig
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rmx100_defconfig
@@ -1,10 +1,12 @@
 # Copyright (c) 2024 Synopsys, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
-CONFIG_XIP=n
+CONFIG_XIP=y
 CONFIG_CONSOLE=y
-CONFIG_SERIAL=y
-CONFIG_UART_CONSOLE=y
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+CONFIG_SEMIHOST=y
+CONFIG_SEMIHOST_CONSOLE=y
 CONFIG_BUILD_OUTPUT_HEX=y
 CONFIG_INCLUDE_RESET_VECTOR=y
 CONFIG_LOG=y
