--- a/boards/snps/nsim/arc_v/rmx100.dtsi
+++ b/boards/snps/nsim/arc_v/rmx100.dtsi
@@ -1,8 +1,20 @@
 #include "rmx1xx.dtsi"
 
 / {
-	ddr0: memory@80000000 {
+	/* Instruction Closely Coupled Memory */
+	iccm0: iccm@0 {
+		compatible = "zephyr,memory-region", "mmio-sram";
+		zephyr,memory-region = "FLASH";
+		zephyr,memory-region-flags = "rx";
+		reg = <0x0 0x40000>; /* 256 KB ICCM */
+	};
+
+	/* Data Closely Coupled Memory */
+	dccm0: dccm@80000000 {
+		compatible = "zephyr,memory-region", "mmio-sram";
+		zephyr,memory-region = "SRAM";
+		zephyr,memory-region-flags = "rw";
 		device_type = "memory";
-		reg = <0x80000000 0x10000000>; /* 256 MB */
+		reg = <0x80000000 0x40000>; /* 256 KB DCCM */
 	};
 };
