--- a/boards/snps/nsim/arc_v/rmx1xx.dtsi
+++ b/boards/snps/nsim/arc_v/rmx1xx.dtsi
@@ -12,7 +12,7 @@
 			device_type = "cpu";
 			reg = <0>;
 			clock-frequency = <5000000>;
-			riscv,isa = "rv32imac_zicsr_zifencei";
+			riscv,isa = "rv32imacu_zicsr_zifencei_zba_zbb_zbs";
 
 			cpu0_intc: interrupt-controller {
 				compatible = "riscv,cpu-intc";
@@ -42,21 +42,6 @@
 			interrupts-extended = <&cpu0_intc 7>;
 			reg = <0xa001bff8 0x8 0xa0014000 0x8>;
 			reg-names = "mtime", "mtimecmp";
-		};
-
-		uart0: serial@10000000 {
-			compatible = "ns16550", "snps,dw-apb-uart";
-			reg = <0x10000000 0x400>;
-			reg-shift = <2>;
-
-			/* AIA interrupt controller is not currently implemented,
-			 * so connect UART interrupt to 17th line as a stub to
-			 * make build system and test framework happy.
-			 */
-			interrupt-parent = <&cpu0_intc>;
-			interrupts = <17>;
-			clock-frequency = <50000000>;
-			status = "disabled";
 		};
 	};
 };
