--- a/boards/snps/nsim/arc_v/support/rmx100.props
+++ b/boards/snps/nsim/arc_v/support/rmx100.props
@@ -1,11 +1,21 @@
 nsim_isa_family=rv32
-nsim_isa_ext=-all.i.zicsr.zifencei.zihintpause.a.m.u.zba.zbb.zbs.zicond.zca.zcb.zcmp.zcmt.zicbom.zicbop
-nsim_isa_big_endian=0
+nsim_isa_core=0
+nsim_isa_rv_marchid=0x80000401
+nsim_isa_rv_mimpid=0x10100
+nsim_isa_unaligned_option=1
+nsim_isa_ext=-all.i.zicsr.zifencei.zihintpause.a.zca.m.u.zcb.zcmp.zcmt.zba.zbb.zbs.zicond.zicbom.zicbop
+nsim_rv_reset_pc=0x0
+nsim_isa_mpy_option=1c
 iccm0_base=0x0
-iccm0_size=0x40000
+iccm0_size=0x80000
 dccm_base=0x80000000
-dccm_size=0x40000
+dccm_size=0x80000
 nsim_isa_dccm_mem_cycles=1
-nsim_mmio_base=2560
-nsim_mem-interface=ARCV_PMP,num_regions=16,granule=1
+icache=0x2000,32,2,a
+nsim_isa_ic_version=1
+nsim_isa_ext=+xarcvstsp.-sstc
+nsim_mmio_base=0xe00
+nsim_isa_ext=+smrnmi
+nsim_rnmi_vec_ext=1
+nsim_rnmi_int_vec=0x100
 nsim_semihosting=1
