--- a/boards/snps/nsim/arc_v/nsim_arc_v_rhx100.dts
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rhx100.dts
@@ -6,19 +6,19 @@
 	model = "Synopsys RHX100";
 	compatible = "snps,rhx100";
 
-	aliases {
-		uart-0 = &uart0;
-	};
-
 	chosen {
 		zephyr,flash = &iccm0;
 		zephyr,sram = &dccm0;
-		zephyr,console = &uart0;
-		zephyr,shell-uart = &uart0;
+		zephyr,code-partition = &iccm0;
+		/* No console - using semihosting */
 	};
 };
 
-&uart0 {
+/* Ensure CCM memories are used for linker */
+&iccm0 {
 	status = "okay";
-	current-speed = <115200>;
+};
+
+&dccm0 {
+	status = "okay";
 };
