--- a/boards/snps/nsim/arc_v/nsim_arc_v_rhx100_defconfig
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rhx100_defconfig
@@ -3,8 +3,9 @@
 
 CONFIG_XIP=y
 CONFIG_CONSOLE=y
-CONFIG_SERIAL=y
-CONFIG_UART_CONSOLE=y
+# Use semihosting instead of UART for console
+CONFIG_SEMIHOST=y
+CONFIG_SEMIHOST_CONSOLE=y
 CONFIG_BUILD_OUTPUT_HEX=y
 CONFIG_INCLUDE_RESET_VECTOR=y
 CONFIG_LOG=y
