--- a/boards/snps/nsim/arc_v/rhx1xx.dtsi
+++ b/boards/snps/nsim/arc_v/rhx1xx.dtsi
@@ -12,7 +12,7 @@
 			device_type = "cpu";
 			reg = <0>;
 			clock-frequency = <5000000>;
-			riscv,isa = "rv32imacfd_zicsr_zifencei_zba_zbb_zbc_zbs";
+			riscv,isa = "rv32imac_zicsr_zifencei_zba_zbb_zbc_zbs";
 
 			cpu0_intc: interrupt-controller {
 				compatible = "riscv,cpu-intc";
@@ -44,10 +44,10 @@
 			reg-names = "mtime", "mtimecmp";
 		};
 
-		uart0: serial@10000000{
-			compatible = "ns16550", "snps,dw-apb-uart";
-			reg = <0x10000000 0x400>;
-			reg-shift = <2>;
+	uart0: serial@f0000000{
+		compatible = "ns16550", "snps,dw-apb-uart";
+		reg = <0xf0000000 0x1000>;
+		reg-shift = <2>;
 
 			/* AIA interrupt controller is not currently implemented,
 			 * so connect UART interrupt to 17th line as a stub to
