--- a/boards/snps/nsim/arc_v/nsim_arc_v_rhx100_defconfig
+++ b/boards/snps/nsim/arc_v/nsim_arc_v_rhx100_defconfig
@@ -7,4 +7,4 @@ CONFIG_SEMIHOST=y
 CONFIG_SEMIHOST_CONSOLE=y
 CONFIG_BUILD_OUTPUT_HEX=y
 CONFIG_INCLUDE_RESET_VECTOR=y
-CONFIG_LOG=y
+# CONFIG_LOG is not set
