boards: snps: nsim: arc_v: rmx100: update memory configuration
Update RMX100 memory map and nSIM simulator properties.

Memory map changes:
- ICCM0: increase from 256KB to 512KB (base: 0x0, size: 0x80000)
- DCCM: relocate from 0x80000000 to 0x100000 and increase to 1MB
- Add SRAM region at 0x10000000 (1MB)
- Add DDR region at 0x80000000 (2GB)

nSIM properties file updated to match the new memory configuration
and hardware specifications.

Signed-off-by: Mohamed Moawad <moawad@synopsys.com>

--- a/boards/snps/nsim/arc_v/rmx100.dtsi
+++ b/boards/snps/nsim/arc_v/rmx100.dtsi
@@ -3,11 +3,21 @@
 / {
 	iccm0: memory@0 {
 		device_type = "memory";
-		reg = <0x0 0x40000>; /* 256 KB ICCM */
+		reg = <0x0 0x80000>; /* 512 KB ICCM */
 	};
 
-	dccm0: memory@80000000 {
+	dccm0: memory@100000 {
 		device_type = "memory";
-		reg = <0x80000000 0x40000>; /* 256 KB DCCM */
+		reg = <0x100000 0x100000>; /* 1 MB DCCM */
+	};
+
+	sram: memory@10000000 {
+		device_type = "memory";
+		reg = <0x10000000 0x100000>; /* 1 MB */
+	};
+
+	ddr0: memory@80000000 {
+		device_type = "memory";
+		reg = <0x80000000 0x80000000>; /* 2 GB */
 	};
 };
