boards/soc: nsim: arc_v: rmx: switch from RV32I to RV32E ISA
Switch RMX series from RV32I (32 general-purpose registers) to RV32E
(16 general-purpose registers) base ISA to match the hardware
configuration.

The RV32E embedded base integer instruction set is optimized for
smaller implementations with reduced register count requirements.

Signed-off-by: Mohamed Moawad <moawad@synopsys.com>

--- a/soc/snps/nsim/arc_v/rmx/Kconfig
+++ b/soc/snps/nsim/arc_v/rmx/Kconfig
@@ -6,7 +6,7 @@ config SOC_SERIES_NSIM_ARC_V_RMX
 
 	select RISCV
 	select RISCV_PRIVILEGED
-	select RISCV_ISA_RV32I
+	select RISCV_ISA_RV32E
 	select RISCV_ISA_EXT_M
 	select RISCV_ISA_EXT_A
 	select RISCV_ISA_EXT_C
