--- a/boards/snps/nsim/arc_v/rmx1xx.dtsi
+++ b/boards/snps/nsim/arc_v/rmx1xx.dtsi
@@ -12,7 +12,7 @@
 				device_type = "cpu";
 				reg = <0>;
 				clock-frequency = <5000000>;
-				riscv,isa = "rv32imac_zicsr_zifencei";
+				riscv,isa = "rv32emac_zicsr_zifencei";
 
 				cpu0_intc: interrupt-controller {
 					compatible = "riscv,cpu-intc";
